Add add-opens flags to allow reflection required for some features to function properly.